--- a/atom/styles.less
+++ b/atom/styles.less
@@ -32,7 +32,7 @@ atom-text-editor {
 }
 
 // To style other content in the text editor's shadow DOM, use the ::shadow expression
-atom-text-editor::shadow .cursor {
-  // border-color: red;
-  .source.python .keyword.control.import.python { color: blue; }
-}
+// atom-text-editor::shadow .cursor {
+//   // border-color: red;
+//   .source.python .keyword.control.import.python { color: blue; }
+// }
